fix: parse cases